# IMEX

./: README.md
wave_github/: CMakeLists.txt  README.txt  config.ini  result_plot.py
wave_github/InverseMatrix/: InverseMatrix.cpp  InverseMatrix.h  InverseMatrixBase.h  InverseMatrixMG.cpp  InverseMatrixMG.h  InverseMatrix_ML.cpp  InverseMatrix_ML.h
wave_github/exact_solution/: ExactSolution.cpp  ExactSolution.h  Rhs.cpp  Rhs.h  rhsfunctions.cpp  rhsfunctions.h
wave_github/intial_value/: InitialValue.cpp  InitialValue.h
wave_github/lac/: solver_gmres.h
wave_github/local_integration/: LocalIntegrators.cpp  LocalIntegrators.h
wave_github/main/: BS_FEM.cpp  BS_FEM.h  Main.cc  OutputMatrix.cpp  OutputMatrix.h  global.h
wave_github/results/: CN.txt  RKM.txt  rIMEX.txt  vIMEX.txt
wave_github/time_discretization/: CrankNicolson.cpp  CrankNicolson.h  RungeKutta.cpp  RungeKutta.h  TimeIntegrator.h  rIMEX.cpp  rIMEX.h  vIMEX.cpp  vIMEX.h
